# wgpu_course

./: README.md
tutorial10_lighting/: Cargo.toml
tutorial10_lighting/src/: lib.rs  light.wgsl  main.rs  model.rs  shader.wgsl
tutorial1_window/: Cargo.toml
tutorial1_window/src/: lib.rs
tutorial2_surface/: Cargo.toml
tutorial2_surface/src/: colors.rs  lib.rs
tutorial3_pipeline/: Cargo.toml
tutorial3_pipeline/src/: lib.rs  shader.wgsl
tutorial4_0_buffers/: Cargo.toml
tutorial4_0_buffers/src/: lib.rs  main.rs  shader.wgsl
tutorial4_1_rotations/: Cargo.toml
tutorial4_1_rotations/src/: colors.rs  lib.rs  main.rs  shader.wgsl
tutorial5_0_textures/: Cargo.toml
tutorial5_0_textures/src/: lib.rs  main.rs  shader.wgsl
tutorial5_1_textures_class/: Cargo.toml
tutorial5_1_textures_class/src/: lib.rs  main.rs  textures.rs
tutorial5_textures/: Cargo.toml
tutorial6_0_camera/: Cargo.toml
tutorial6_0_camera/src/: main.rs  shader.wgsl
tutorial6_1_rotations/: Cargo.toml
tutorial6_1_rotations/src/: lib.rs  main.rs  shader.wgsl
tutorial6_camera/: Cargo.toml
tutorial6_camera/src/: lib.rs  main.rs
tutorial7_instancing/: Cargo.toml
tutorial7_instancing/src/: lib.rs  shader.wgsl
tutorial8_depth_buffer/: Cargo.toml
tutorial8_depth_buffer/src/: lib.rs  main.rs  shader.wgsl  textures.rs
tutorial9_model_loading/: Cargo.toml
tutorial9_model_loading/src/: colors.rs  lib.rs  (+3 more)
wgpu02/: Cargo.toml
wgpu_book/: Cargo.toml
wgpu_book/examples/ch01/: test01.rs  test02.rs
wgpu_book/examples/ch02/: common.rs  first_triangle.rs  first_triangle.wgsl
(+1 files in other folders)
