[package]
name = "tutorial5_1_textures_class"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
env_logger = "0.10"
log = "0.4"
wgpu = "0.16"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
anyhow = "1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
