[package]
name = "wgpu_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "ch01_test01"
path = "examples/ch01/test01.rs"

[[example]]
name = "ch01_test02"
path = "examples/ch01/test02.rs"

[[example]]
name = "ch02_first_triangle"
path = "examples/ch02/first_triangle.rs"

[dependencies]
wgpu = "0.16"
cgmath = "0.18"
env_logger = "0.10.0"
futures = "0.3"
gfx-hal = "0.9"
image = "0.24.6"
log = "0.4"
pollster = "0.3.0"
winit = "0.28.6"
bytemuck = { version = "1.4", features = ["derive"]}
anyhow = "1.0"
rand = "0.8.0"